Avoid "XUL box for div element contained an inline #text child, forcing all  its children to be wrapped in a block." warning by making sure that ".cookiePathLabel span" style is applied on path text (in SPAN element).
git-svn-id: http://firecookie.googlecode.com/svn/trunk@156 c6f3a21d-8651-0410-bb1f-c71b198f148d

--- a/chrome/skin/classic/firecookie.css
+++ b/chrome/skin/classic/firecookie.css
@@ -211,7 +211,15 @@
 
 /* This style is to avoid warning: XUL box for div element contained 
  an inline span child, forcing all its children to be wrapped in a block, 
- which is caused by the previous style */
+ which is caused by the previous style.
+ 
+ Related to following message:
+ nsIScriptError: XUL box for div element contained an inline #text child,
+ forcing all its children to be wrapped in a block. [JavaScript Warning:
+ "XUL box for div element contained an inline #text child, forcing all
+ its children to be wrapped in a block."
+ {file: "chrome://firebug/content/panel.html" line: 0}]
+ */
 .cookiePathLabel span,
 .cookieValueLabel span {
     display: inline-block;
